data/derived/comb/progs/unify/prog4876.ml.out
Characters 153-157:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type int * ('a * 'b) list
       but an expression was expected of type (int * 'c list) list
